--- a/css/main.css
+++ b/css/main.css
@@ -348,7 +348,7 @@ a {
   max-width: 1920px;
   margin-left: auto;
   margin-right: auto;
-  background-image: url("../images/Hero/course-375.png"), url("../images/Hero/gradient-375.png"), url("../images/Hero/overlay-375.jpg");
+  background-image: url("/images/Hero/course-375.png"), url("/images/Hero/gradient-375.png"), url("/images/Hero/overlay-375.jpg");
   background-repeat: no-repeat;
   background-position: left 0px top 220px, top, top;
 }
