--- a/sass/components/_hero-overlay.scss
+++ b/sass/components/_hero-overlay.scss
@@ -10,9 +10,8 @@
   margin-left: auto;
   margin-right: auto;
 
-  background-image: url("../images/Hero/course-375.png"),
-    url("../images/Hero/gradient-375.png"),
-    url("../images/Hero/overlay-375.jpg");
+  background-image: url("/images/Hero/course-375.png"),
+    url("/images/Hero/gradient-375.png"), url("/images/Hero/overlay-375.jpg");
 
   background-repeat: no-repeat;
   background-position: left 0px top 220px, top, top;
