--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,3 +13,6 @@
 @import "./components/advantages";
 @import "./components/describe";
 @import "./components/price";
+@import "./components/subscribe";
+@import "./components/about";
+@import "./components/icons";
