--- a/css/main.css
+++ b/css/main.css
@@ -279,6 +279,11 @@ a {
   padding-left: 16px;
   padding-right: 16px;
 }
+@media screen and (min-width: 375px) {
+  .container {
+    width: 375px;
+  }
+}
 
 .logo-img {
   width: 60px;
@@ -342,6 +347,7 @@ a {
   color: #ffffff;
   width: 375px;
   height: 1001px;
+  position: relative;
 }
 
 .hero-overlay {
@@ -406,12 +412,20 @@ a {
   margin-top: 30px;
 }
 
-.advantages-item:first-child {
-  max-width: 158px;
+.advantages-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 15px;
 }
-
+.advantages-item:first-child {
+  max-width: 178px;
+}
 .advantages-item:last-child {
-  max-width: 198px;
+  max-width: 218px;
 }
 
 .advantages-text {
@@ -527,4 +541,114 @@ a {
 
 sup {
   top: -1.3em;
+}
+
+.subscribe-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 12px;
+  margin-top: 15px;
+}
+
+.subscribe-btn {
+  padding: 19px 40px;
+  width: 343px;
+  border-radius: 15px;
+  border-color: transparent;
+  cursor: pointer;
+  text-transform: uppercase;
+  font-size: 16px;
+  line-height: 24px;
+  color: #2b2b2a;
+  background-color: #e0ff00;
+}
+
+.subscribe-text {
+  font-size: 14px;
+  line-height: 21px;
+}
+.subscribe-text-accent {
+  font-weight: 700;
+}
+
+.about-container {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.about-title {
+  font-family: "Inter", sans-serif;
+  font-size: 30px;
+  font-weight: 900;
+  line-height: 36px;
+  letter-spacing: 0em;
+  text-align: center;
+}
+
+.about-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 20px;
+  margin-top: 30px;
+}
+
+.about-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about-text {
+  max-width: 140px;
+  font-size: 16px;
+  line-height: 24px;
+  text-align: center;
+}
+@media screen and (max-width: 1920px) {
+  .about-text-second {
+    display: none;
+  }
+}
+
+.icon-mtb {
+  position: absolute;
+  right: 0;
+}
+
+.icon-mbr {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.check-mcr {
+  position: absolute;
+  right: 50px;
+  top: 365px;
+}
+
+.check-mlb {
+  position: absolute;
+  bottom: 230px;
 }/*# sourceMappingURL=main.css.map */
