--- a/sass/utils/_common-styles.scss
+++ b/sass/utils/_common-styles.scss
@@ -30,9 +30,9 @@ a {
   padding-left: 16px;
   padding-right: 16px;
 
-  // @media screen and (min-width: 375px) {
-  //   width: 375px;
-  // }
+  @media screen and (min-width: 375px) {
+    width: 375px;
+  }
 
   // @media screen and (min-width: 1920px) {
   //   width: 1920px;
