--- a/sass/components/_phone-container.scss
+++ b/sass/components/_phone-container.scss
@@ -3,3 +3,10 @@
     display: none;
   }
 }
+
+.phone-link {
+  font-family: "Inter";
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 36px;
+}
