--- a/css/main.css
+++ b/css/main.css
@@ -271,6 +271,7 @@ img {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 .container {
@@ -284,6 +285,13 @@ a {
     width: 375px;
   }
 }
+@media screen and (min-width: 1920px) {
+  .container {
+    width: 1920px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
 
 .logo-img {
   width: 60px;
@@ -291,7 +299,8 @@ a {
 }
 @media screen and (min-width: 1920px) {
   .logo-img {
-    display: none;
+    width: 110px;
+    height: 65px;
   }
 }
 
@@ -308,6 +317,12 @@ a {
   padding-top: 13px;
   padding-bottom: 13px;
 }
+@media screen and (min-width: 1920px) {
+  .header-container {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
+}
 
 .btn-container {
   display: -webkit-box;
@@ -316,10 +331,35 @@ a {
   gap: 25px;
 }
 
-@media screen and (max-width: 1919px) {
+@media screen and (max-width: 1920px) {
   .nav-container {
     display: none;
   }
+}
+
+.nav-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 30px;
+}
+
+.nav-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 5px;
+}
+
+.nav-link {
+  font-size: 16px;
+  line-height: 24px;
 }
 
 .burger-btn {
@@ -328,11 +368,23 @@ a {
   margin-right: auto;
   cursor: pointer;
 }
+@media screen and (min-width: 1920px) {
+  .burger-btn {
+    display: none;
+  }
+}
 
 @media screen and (max-width: 1919px) {
   .phone-container {
     display: none;
   }
+}
+
+.phone-link {
+  font-family: "Inter";
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 36px;
 }
 
 .user-btn {
@@ -341,36 +393,69 @@ a {
   cursor: pointer;
   font-size: 14px;
 }
+@media screen and (min-width: 1920px) {
+  .user-btn {
+    background-color: #2b2b2a;
+    color: #ffffff;
+    padding: 15px 42px;
+    border-radius: 15px;
+    font-size: 16px;
+    line-height: 24px;
+  }
+}
 
 .hero {
   background-color: #2b2b2a;
   color: #ffffff;
   width: 375px;
-  height: 1001px;
   position: relative;
+}
+@media screen and (min-width: 1920px) {
+  .hero {
+    width: 1920px;
+  }
 }
 
 .hero-overlay {
   max-width: 1920px;
   margin-left: auto;
   margin-right: auto;
-  background-image: url("/images/Hero/course-375.png"), url("/images/Hero/gradient-375.png"), url("/images/Hero/overlay-375.jpg");
   background-repeat: no-repeat;
   background-position: left 0px top 220px, top, top;
+  background-image: url("/images/Hero/course-375.png"), url("/images/Hero/gradient-375.png"), url("/images/Hero/overlay-375.jpg");
+}
+@media screen and (min-width: 1920px) {
+  .hero-overlay {
+    background-image: url("/images/Hero/course-1920.png"), url("/images/Hero/gradient-1920.png"), url("/images/Hero/gradient-bottom-1920.png"), url("/images/Hero/overlay-1920.jpg");
+    background-position: left 375px top 160px, left 375px top, bottom right, top right;
+  }
 }
 
 .hero-container {
   padding-top: 170px;
+  padding-bottom: 60px;
+}
+@media screen and (min-width: 1920px) {
+  .hero-container {
+    padding-top: 102px;
+    padding-bottom: 102px;
+    padding-left: 375px;
+  }
 }
 
 .hero-title {
   font-family: "Inter", sans-serif;
   font-weight: 900;
   font-size: 36px;
-  max-width: 294px;
   margin-top: 75px;
   line-height: 43px;
   letter-spacing: 0.06em;
+}
+@media screen and (min-width: 1920px) {
+  .hero-title {
+    font-size: 50px;
+    line-height: 60px;
+  }
 }
 
 .excellence-list {
@@ -424,8 +509,18 @@ a {
 .advantages-item:first-child {
   max-width: 178px;
 }
+@media screen and (min-width: 1920px) {
+  .advantages-item:first-child {
+    max-width: 400px;
+  }
+}
 .advantages-item:last-child {
   max-width: 218px;
+}
+@media screen and (min-width: 1920px) {
+  .advantages-item:last-child {
+    max-width: 400px;
+  }
 }
 
 .advantages-text {
@@ -434,14 +529,18 @@ a {
 }
 
 .describe-list {
-  margin-left: 20px;
-  margin-top: 40px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: 40px;
+}
+@media screen and (max-width: 1919px) {
+  .describe-list {
+    margin-left: 20px;
+    margin-top: 40px;
+  }
 }
 
 .describe-item {
@@ -559,8 +658,7 @@ sup {
 }
 
 .subscribe-btn {
-  padding: 19px 40px;
-  width: 343px;
+  padding: 19px 82px;
   border-radius: 15px;
   border-color: transparent;
   cursor: pointer;
@@ -583,6 +681,11 @@ sup {
   padding-top: 60px;
   padding-bottom: 60px;
 }
+@media screen and (min-width: 1920px) {
+  .about-container {
+    padding: 200px 599px;
+  }
+}
 
 .about-title {
   font-family: "Inter", sans-serif;
@@ -591,6 +694,12 @@ sup {
   line-height: 36px;
   letter-spacing: 0em;
   text-align: center;
+}
+@media screen and (min-width: 1920px) {
+  .about-title {
+    font-size: 40px;
+    line-height: 48px;
+  }
 }
 
 .about-list {
@@ -605,6 +714,12 @@ sup {
   gap: 20px;
   margin-top: 30px;
 }
+@media screen and (min-width: 1920px) {
+  .about-list:last-child {
+    gap: 40px;
+    margin-top: 50px;
+  }
+}
 
 .about-item {
   display: -webkit-box;
@@ -618,22 +733,61 @@ sup {
       -ms-flex-align: center;
           align-items: center;
 }
+@media screen and (min-width: 1920px) {
+  .about-item:last-child {
+    display: none;
+  }
+}
+@media screen and (min-width: 1920px) {
+  .about-item:nth-child(2) {
+    display: none;
+  }
+}
 
 .about-text {
-  max-width: 140px;
+  width: 140px;
   font-size: 16px;
   line-height: 24px;
   text-align: center;
+}
+.about-text-second {
+  display: block;
 }
 @media screen and (max-width: 1920px) {
   .about-text-second {
     display: none;
   }
 }
+@media screen and (min-width: 1920px) {
+  .about-text-first {
+    display: none;
+  }
+}
+@media screen and (min-width: 1920px) {
+  .about-text {
+    width: 200px;
+  }
+}
 
-.icon-mtb {
+.icon-mtr {
   position: absolute;
   right: 0;
+}
+@media screen and (min-width: 1920px) {
+  .icon-mtr {
+    display: none;
+  }
+}
+
+.icon-dtr {
+  display: none;
+}
+@media screen and (min-width: 1920px) {
+  .icon-dtr {
+    display: block;
+    position: absolute;
+    right: 0;
+  }
 }
 
 .icon-mbr {
@@ -641,14 +795,70 @@ sup {
   bottom: 0;
   right: 0;
 }
+@media screen and (min-width: 1920px) {
+  .icon-mbr {
+    display: none;
+  }
+}
+
+.icon-dbl {
+  display: none;
+}
+@media screen and (min-width: 1920px) {
+  .icon-dbl {
+    display: block;
+    position: absolute;
+    bottom: 0;
+  }
+}
 
 .check-mcr {
   position: absolute;
   right: 50px;
   top: 365px;
 }
+@media screen and (min-width: 1920px) {
+  .check-mcr {
+    display: none;
+  }
+}
 
 .check-mlb {
   position: absolute;
   bottom: 230px;
+}
+@media screen and (min-width: 1920px) {
+  .check-mlb {
+    display: none;
+  }
+}
+
+.check-dtl {
+  display: none;
+}
+@media screen and (min-width: 1920px) {
+  .check-dtl {
+    display: block;
+    position: absolute;
+    left: 284px;
+  }
+}
+
+@media screen and (min-width: 1920px) {
+  .position-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+    -webkit-box-align: end;
+        -ms-flex-align: end;
+            align-items: flex-end;
+    gap: 50px;
+  }
 }/*# sourceMappingURL=main.css.map */
