--- a/sass/components/_about.scss
+++ b/sass/components/_about.scss
@@ -1,6 +1,10 @@
 .about-container {
   padding-top: 60px;
   padding-bottom: 60px;
+
+  @media screen and (min-width: 1920px) {
+    padding: 200px 599px;
+  }
 }
 .about-title {
   font-family: "Inter", sans-serif;
@@ -9,6 +13,11 @@
   line-height: 36px;
   letter-spacing: 0em;
   text-align: center;
+
+  @media screen and (min-width: 1920px) {
+    font-size: 40px;
+    line-height: 48px;
+  }
 }
 
 .about-list {
@@ -18,23 +27,54 @@
   gap: 20px;
 
   margin-top: 30px;
+
+  &:last-child {
+    @media screen and (min-width: 1920px) {
+      gap: 40px;
+      margin-top: 50px;
+    }
+  }
 }
+
 .about-item {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  &:last-child {
+    @media screen and (min-width: 1920px) {
+      display: none;
+    }
+  }
+
+  &:nth-child(2) {
+    @media screen and (min-width: 1920px) {
+      display: none;
+    }
+  }
 }
 
 .about-text {
-  max-width: 140px;
+  width: 140px;
 
   font-size: 16px;
   line-height: 24px;
   text-align: center;
 
   &-second {
+    display: block;
     @media screen and (max-width: 1920px) {
       display: none;
     }
+  }
+
+  &-first {
+    @media screen and (min-width: 1920px) {
+      display: none;
+    }
+  }
+
+  @media screen and (min-width: 1920px) {
+    width: 200px;
   }
 }
