--- a/sass/components/_header-container.scss
+++ b/sass/components/_header-container.scss
@@ -4,10 +4,14 @@
   justify-content: space-between;
   padding-top: 13px;
   padding-bottom: 13px;
+
+  @media screen and (min-width: 1920px) {
+    padding-top: 15px;
+    padding-bottom: 15px;
+  }
 }
 
 .btn-container {
   display: flex;
-
   gap: 25px;
 }
