--- a/sass/components/_hero-content.scss
+++ b/sass/components/_hero-content.scss
@@ -1,13 +1,24 @@
 .hero-container {
   padding-top: 170px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1920px) {
+    padding-top: 102px;
+    padding-bottom: 102px;
+    padding-left: 375px;
+  }
 }
 
 .hero-title {
   font-family: "Inter", sans-serif;
   font-weight: 900;
   font-size: 36px;
-  max-width: 294px;
   margin-top: 75px;
   line-height: 43px;
   letter-spacing: 0.06em;
+
+  @media screen and (min-width: 1920px) {
+    font-size: 50px;
+    line-height: 60px;
+  }
 }
