--- a/sass/components/_icons.scss
+++ b/sass/components/_icons.scss
@@ -1,20 +1,66 @@
-.icon-mtb {
+.icon-mtr {
   position: absolute;
   right: 0;
+
+  @media screen and (min-width: 1920px) {
+    display: none;
+  }
+}
+
+.icon-dtr {
+  display: none;
+
+  @media screen and (min-width: 1920px) {
+    display: block;
+    position: absolute;
+    right: 0;
+  }
 }
 
 .icon-mbr {
   position: absolute;
   bottom: 0;
   right: 0;
+
+  @media screen and (min-width: 1920px) {
+    display: none;
+  }
+}
+.icon-dbl {
+  display: none;
+
+  @media screen and (min-width: 1920px) {
+    display: block;
+    position: absolute;
+    bottom: 0;
+  }
 }
 
 .check-mcr {
   position: absolute;
   right: 50px;
   top: 365px;
+
+  @media screen and (min-width: 1920px) {
+    display: none;
+  }
 }
+
 .check-mlb {
   position: absolute;
   bottom: 230px;
+
+  @media screen and (min-width: 1920px) {
+    display: none;
+  }
+}
+
+.check-dtl {
+  display: none;
+
+  @media screen and (min-width: 1920px) {
+    display: block;
+    position: absolute;
+    left: 284px;
+  }
 }
