--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -3,19 +3,7 @@
   height: 35px;
 
   @media screen and (min-width: 1920px) {
-    display: none;
+    width: 110px;
+    height: 65px;
   }
 }
-
-// .logo-container {
-//   width: 10px;
-//   height: 5px;
-
-//   //   @media screen and (min-width: 1920px) {
-//   //     display: none;
-//   //   }
-
-//   @media screen and (min-width: 1920px) {
-//     display: none;
-//   }
-// }
