--- a/sass/components/_navigation.scss
+++ b/sass/components/_navigation.scss
@@ -1,5 +1,22 @@
 .nav-container {
-  @media screen and (max-width: 1919px) {
+  @media screen and (max-width: 1920px) {
     display: none;
   }
+}
+
+.nav-list {
+  display: flex;
+  align-items: center;
+  gap: 30px;
+}
+
+.nav-item {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.nav-link {
+  font-size: 16px;
+  line-height: 24px;
 }
