--- a/sass/utils/_common-styles.scss
+++ b/sass/utils/_common-styles.scss
@@ -22,6 +22,7 @@ img {
 
 a {
   text-decoration: none;
+  color: inherit;
 }
 
 .container {
@@ -34,7 +35,9 @@ a {
     width: 375px;
   }
 
-  // @media screen and (min-width: 1920px) {
-  //   width: 1920px;
-  // }
+  @media screen and (min-width: 1920px) {
+    width: 1920px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
 }
