--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,7 +4,7 @@
 @import "./components/logo";
 @import "./components/_header-container";
 @import "./components/navigation";
-@import "./components/burger-btn";
+@import "./components/button-menu";
 @import "./components/phone-container";
 @import "./components/user-btn";
 @import "./components/hero-overlay";
